contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     width: 1px;
     height: 1px;
     overflow: hidden;
+    color: black
 }
 nav ul {
     list-style-type: none;
